<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NhapSo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            android:text="@string/ns"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="9dp"
            android:layout_height="38dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/So"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="131dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/c"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="230dp">

        <Button
            android:id="@+id/button53"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/mot"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button54"
            android:layout_width="103dp"
            android:layout_height="77dp"
            android:layout_marginRight="20dp"
            android:text="@string/hai"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0" />

        <Button
            android:id="@+id/button55"
            android:layout_width="104dp"
            android:layout_height="70dp"
            android:layout_marginRight="30dp"
            android:text="@string/ba"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bon"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_rowSpan="2"
            app:layout_rowWeight="2" />

        <Button
            android:id="@+id/button58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button32"
            android:layout_width="101dp"
            android:layout_height="71dp"
            android:layout_marginRight="50dp"
            android:text="@string/nam"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button38"
            android:layout_width="113dp"
            android:layout_height="77dp"
            android:layout_marginRight="20dp"
            android:text="@string/khong"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button40"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginRight="50dp"
            android:text="@string/sau"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp">

        <Button
            android:id="@+id/button49"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:text="@string/bay"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button50"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/tam"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button51"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:text="@string/chin"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button59"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:onClick="sendMessageOk"
            android:text="@string/ok"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button60"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>