<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="horizontal"
    tools:context=".GridLayout">

    <Button
        android:id="@+id/button28"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bon"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="TextView" />

    <Button
        android:id="@+id/button17"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/mot"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/hai"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button191"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sau"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button201"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/muoi_mot"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button26"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ba"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button27"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/nam"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button202"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/muoi_hai"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button203"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/muoi_ba"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button204"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/muoi_bon"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button205"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/muoi_nam"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button192"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bay"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button193"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tam"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button194"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/chin"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button195"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/muoi"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/btn_color5"
        android:onClick="doButtonNew"
        android:text="@string/newgmae" />
</GridLayout>