<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/line"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/color" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/anh1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/lg1" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/lg2" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/lg3" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/btn_color3"
        android:hint="@string/text"
        android:textAlignment="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/en"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/set" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBar4"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="10dp"
            android:max="40" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/info" />

        <Button
            android:id="@+id/button47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:onClick="doButtonClose"
            android:text="@string/close" />
    </LinearLayout>



</LinearLayout>