<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".BMTActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@color/purple_700"
            android:text="@string/chiso"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/bmi"
            android:textAlignment="viewEnd"
            android:textColor="@color/btn_color"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cn"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/button33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:onClick="doButtonClickChon"
                android:text="@string/chon" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/cc"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/cm"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dm"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:progress="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:onClick="doButtonTinh"
            android:text="@string/tinh"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/thoat"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/kq"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="53dp" />

</LinearLayout>