<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OperatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:freezesText="false"
            android:hint="@string/number1"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="@string/number2"
            android:inputType="number"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/btn_color3"
            android:text="@string/cong"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/btn_color7"
            android:text="@string/tru"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:text="@string/nhan"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/btn_color6"
            android:text="@string/chia"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_color4"
            android:hint="Kết Qủa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/anh1" />
    </LinearLayout>

</LinearLayout>