<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayout">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView4"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView12"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/purple_200"
        android:text="@string/login2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/button6"
        android:background="@color/purple_200"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/teal_200"
        android:text="@string/Register" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/user68" />

</RelativeLayout>